--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "@types/papaparse": "^5.2.5",
     "@types/react-router-dom": "^5.1.7",
     "gh-pages": "^3.1.0"
-  }
+  },
+  "proxy": "https://raw.githubusercontent.com"
 }
