--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.15.0",
+    "history": "^4",
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
