--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@nivo/bar": "^0.67.0",
+    "@nivo/calendar": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
