--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nivo/calendar": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "@nivo/scatterplot": "^0.67.0",
+    "@nivo/treemap": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
