--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@nivo/bar": "^0.67.0",
     "@nivo/calendar": "^0.67.0",
     "@nivo/core": "^0.67.0",
+    "@nivo/line": "^0.67.0",
     "@nivo/scatterplot": "^0.67.0",
     "@nivo/treemap": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.4",
