--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "^4.6.2",
     "@nivo/bar": "^0.67.0",
     "@nivo/calendar": "^0.67.0",
+    "@nivo/chord": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "@nivo/line": "^0.67.0",
     "@nivo/scatterplot": "^0.67.0",
@@ -29,8 +30,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -55,9 +56,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.13.8",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@types/papaparse": "^5.2.5",
     "@types/react-router-dom": "^5.1.7",
-    "gh-pages": "^3.1.0"
+    "customize-cra": "^1.0.0",
+    "gh-pages": "^3.1.0",
+    "react-app-rewired": "^2.1.8"
   },
   "proxy": "https://raw.githubusercontent.com"
 }
