--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -61,6 +62,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@types/papaparse": "^5.2.5",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "customize-cra": "^1.0.0",
     "gh-pages": "^3.1.0",
     "react-app-rewired": "^2.1.8"
