--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "@nivo/bar": "^0.67.0",
-    "@nivo/calendar": "^0.67.0",
-    "@nivo/chord": "^0.67.0",
-    "@nivo/core": "^0.67.0",
-    "@nivo/line": "^0.67.0",
-    "@nivo/scatterplot": "^0.67.0",
-    "@nivo/treemap": "^0.67.0",
+    "@nivo/bar": "^0.68.0",
+    "@nivo/calendar": "^0.68.0",
+    "@nivo/chord": "^0.68.0",
+    "@nivo/core": "^0.68.0",
+    "@nivo/line": "^0.68.0",
+    "@nivo/scatterplot": "^0.68.0",
+    "@nivo/sunburst": "^0.68.0",
+    "@nivo/treemap": "^0.68.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
