--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.15.0",
+    "dateformat": "^4.5.1",
     "history": "^4",
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
@@ -61,6 +62,7 @@
     "@babel/plugin-proposal-logical-assignment-operators": "^7.13.8",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@types/dateformat": "^3.0.1",
     "@types/papaparse": "^5.2.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-syntax-highlighter": "^13.5.0",
